--- a/Game/pom.xml
+++ b/Game/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>javafx-controls</artifactId>
             <version>21</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>21</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -36,7 +41,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>br.edu.ifsp.UI.App</mainClass>
+                            <mainClass>br.edu.ifsp.UI.Colecao</mainClass>
                         </configuration>
                     </execution>
                 </executions>
